--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header.sticky {
 
 header .brand {
   color: #fff;
-  font-size: 32px;
+  font-size: 26px;
   font-weight: 700;
   text-transform: uppercase;
   text-decoration: none;
@@ -62,7 +62,7 @@ section {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  background: url(./images/bg.png) no-repeat;
+  background: url(./img/hotel-hallway-interior-door.jpg) no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -73,13 +73,15 @@ section {
 }
 
 .main .content h2 {
-  color: #fff;
+  color: #DCDCDC;
   font-size: 36px;
+  font-family: serif;
   font-weight: 500;
 }
 
 .main .content h2 span {
-  font-size: 60px;
+  font-size: 34px;
+  font-family: serif;
   font-weight: 600;
 }
 
@@ -91,8 +93,10 @@ section {
 
 .animated-text h3 {
   color: crimson;
-  font-size: 52px;
+  font-size: 36px;
   font-weight: 700;
+  font-family: serif;
+  font-style: italic;
   line-height: 70px;
   letter-spacing: 1px;
 }
@@ -228,141 +232,11 @@ section {
   margin-bottom: 20px;
 }
 
-.skills {
-  background: #000016;
-}
-
-.skills .content {
-  position: relative;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  color: #fff;
-  margin-top: 20px;
-}
-
-.skills .col-left {
-  position: relative;
-  width: 45%;
-}
-
-.skills .col-left .content-title {
-  margin-bottom: 20px;
-}
-
-.skills .col-right {
-  position: relative;
-  width: 45%;
-}
-
-.skills .col-right .bar {
-  margin-bottom: 15px;
-  padding: 10px;
-}
-
-.skills .col-right .bar .info {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 5px;
-}
-
-.skills .info span {
-  font-size: 18px;
-  font-weight: 500;
-}
-
-.skills .line {
-  position: relative;
-  width: 100%;
-  height: 15px;
-  background: #ccc;
-  border-radius: 2px;
-}
-
-.skills .line::before {
-  content: '';
-  position: absolute;
-  height: 100%;
-  top: 0;
-  left: 0;
-  border-radius: 2px;
-}
-
-.skills .html::before {
-  width: 95%;
-  background: #E45126;
-}
-
-.skills .css::before {
-  width: 85%;
-  background: #0C73B8;
-}
-
-.skills .javascript::before {
-  width: 80%;
-  background: #E3A324;
-}
-
-.skills .jquery::before {
-  width: 80%;
-  background: #30DD6D;
-}
-
-.skills .php::before {
-  width: 70%;
-  background: #6D7EB8;
-}
-
-.services .content {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  flex-direction: row;
-  margin-top: 20px;
-}
-
-.title p {
-  width: 80%;
-}
-
-.services .content .card {
-  background: #fff;
-  width: 300px;
-  margin: 10px;
-  padding: 25px;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  box-shadow: 0 5px 25px rgba(1 1 1 /15%);
-  border-radius: 10px
-}
-
-.services .card .service-icon {
-  color: crimson;
-  font-size: 120px;
-  text-align: center;
-  transition: transform .5s ease;
-}
-
-.services .card .service-icon:hover {
-  transform: translateY(-10px);
-}
-
-.services .card .info {
-  text-align: center;
-}
-
-.services .card .info h3 {
-  color: crimson;
-  font-size: 20px;
-  font-weight: 700;
-  margin: 10px;
-}
 
 .work {
   background: #000016;
 }
+
 
 .work .content {
   display: flex;
@@ -401,21 +275,28 @@ section {
 }
 
 .contact .content {
-  display: flex;
+  display: inline-block;
   justify-content: center;
   flex-wrap: wrap;
   flex-direction: column;
   margin-top: 20px;
 }
 
-.contact .content .row {
+.contact .card .contact-icon {
+  color: crimson;
+  font-size: 60px;
+  text-align: center;
+  transition: transform .5s ease;
+}
+
+.row {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   flex-direction: row;
 }
 
-.contact .row .card {
+.row .card {
   background: #fff;
   width: 240px;
   margin: 20px;
@@ -426,13 +307,6 @@ section {
   flex-direction: column;
   box-shadow: 0 5px 25px rgba(1 1 1 /15%);
   border-radius: 10px
-}
-
-.contact .card .contact-icon {
-  color: crimson;
-  font-size: 60px;
-  text-align: center;
-  transition: transform .5s ease;
 }
 
 .contact .card:hover .contact-icon {
@@ -449,6 +323,7 @@ section {
 .contact .card .info span {
   color: #666;
   font-weight: 500;
+  font-size: 14px;
 }
 
 .contact-form {
@@ -505,6 +380,52 @@ section {
   background: #fff;
   color: #000;
   border: 1px solid #111;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height:100%;
+
+}
+.modalbg{
+  width: 30%;
+  height: 30%;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal .card {
+  background: #fff;
+  width: 240px;
+  margin: 20px;
+  padding: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0 5px 25px rgba(1 1 1 /15%);
+  border-radius: 10px
+}
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .footer {
@@ -586,17 +507,45 @@ section {
     transition: .3s ease;
     filter: invert(1);
   }
+  .work .content img{
+    width: 100%;
+    height: 100vh;
+    }
+  .main{
+    background: url(./img/behnam-norouzi-V3KpDE4WlW8-unsplash.jpg) no-repeat;
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+  }
+ 
+
 
   section {
     padding: 80px 20px;
   }
 
   .main .content h2 {
-    font-size: 25px;
+    font-size: 20px;
+    font-family: serif;
+    font-style: italic;
+    font-weight: 500;
+    color: #D2691E;
+  }
+
+  .main .content h2 span{
+    font-size: 18px;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
+    color: #D2691E;
+
   }
 
   .main .content h3 {
-    font-size: 35px;
+    font-size: 20px;
+    font-family: serif;
+    font-style: italic;
   }
 
   .section-title {
