--- a/style.css
+++ b/style.css
@@ -326,34 +326,32 @@ section {
   font-size: 14px;
 }
 
-.contact-form {
-  background: #fff;
-  max-width: 600px;
-  margin-top: 50px;
-  padding: 50px;
-  border-radius: 10px;
-  box-shadow: 0 5px 25px rgba(1 1 1 /15%);
-}
-
-.contact-form h3 {
-  color: #111;
-  font-size: 25px;
-  font-weight: 600;
-  text-align: center;
-  margin-bottom: 40px;
-}
-
-.contact-form .input-box {
-  position: relative;
+.modal-bg{
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
   width: 100%;
-  margin-bottom: 20px;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4);
+}
+.modal{
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 35%;
 }
 
-.contact-form .input-box input,
-.contact-form .input-box textarea {
+.modal .input-box input,
+.modal .input-box textarea {
   color: #111;
   width: 100%;
-  padding: 10px;
+  padding: 3px;
   font-size: 17px;
   font-weight: 400;
   outline: none;
@@ -362,58 +360,22 @@ section {
   resize: none;
 }
 
-.contact-form .input-box .send-btn {
+.modal-bg .modal .btn{
   color: #fff;
   background: crimson;
-  display: inline-block;
-  font-size: 19px;
+  font-size: 14px;
   font-weight: 500;
+  display: inline-block;
+  padding: 5px 10px;
   text-transform: uppercase;
-  letter-spacing: 2px;
-  width: 100%;
-  border: none;
-  cursor: pointer;
+  text-decoration: none;
+  letter-spacing: 1px;
+  border-radius: 2px;
+  margin: 20px 0;
   transition: .5s ease;
-}
-
-.contact-form .input-box .send-btn:hover {
-  background: #fff;
-  color: #000;
-  border: 1px solid #111;
-}
-
-.modal {
-  display: none;
-  position: fixed;
-  align-items: center;
-  justify-content: center;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height:100%;
 
 }
-.modalbg{
-  width: 30%;
-  height: 30%;
-  align-items: center;
-  justify-content: center;
-}
 
-.modal .card {
-  background: #fff;
-  width: 240px;
-  margin: 20px;
-  padding: 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  box-shadow: 0 5px 25px rgba(1 1 1 /15%);
-  border-radius: 10px
-}
 .close {
   color: #aaaaaa;
   float: right;
@@ -520,8 +482,14 @@ section {
     background-attachment: fixed;
   }
  
-
-
+  .modal{
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 60%;
+  }
+  
   section {
     padding: 80px 20px;
   }
